Ok, the makefile should work now...I hope

--- a/tools/makefile
+++ b/tools/makefile
@@ -1,18 +1,18 @@
 
 
-BUILD_FOLDER=../../Builds
-PLUGIN_FOLDER=../wp-plugin/PurdueCruPlugin
-THEME_FOLDER=../wp-theme/PurdueCruTheme
+BUILD_FOLDER=../Builds
+PLUGIN_FOLDER=../wp-plugin/
+THEME_FOLDER=../wp-theme/
 
 all: build_zips
 
 build_zips: PurdueCruTheme.zip PurdueCruPlugin.zip
 
 PurdueCruTheme.zip: builds $(wildcard $(THEME_FOLDER)/*)
-	cd $(THEME_FOLDER); zip -r PurdueCruTheme *; mv "PurdueCruTheme.zip" $(BUILD_FOLDER)   
+	cd $(THEME_FOLDER); zip -r PurdueCruTheme PurdueCruTheme; mv "PurdueCruTheme.zip" $(BUILD_FOLDER)   
 
 PurdueCruPlugin.zip: builds $(wildcard $(PLUGIN_FOLDER)/*)
-	cd $(PLUGIN_FOLDER); zip -r PurdueCruPlugin *; mv "PurdueCruPlugin.zip" $(BUILD_FOLDER)
+	cd $(PLUGIN_FOLDER); zip -r PurdueCruPlugin PurdueCruPlugin; mv "PurdueCruPlugin.zip" $(BUILD_FOLDER)
 
 builds:
 	if [ ! -d $(BUILD_FOLDER) ]; then mkdir $(BUILD_FOLDER); fi
